--- a/templates/scoreboard.html
+++ b/templates/scoreboard.html
@@ -18,7 +18,7 @@
             padding: 20px;
         }
 
-        .body::after {
+        /* .body::after {
             content: '';
             position: absolute;
             top: 0;
@@ -27,7 +27,7 @@
             height: 100%;
             background-color: rgba(0, 0, 0, 0.4);
             z-index: -1;
-        }
+        } */
 
         .header {
             background-image: url('static/images/cover.jpg');
